--- a/CSS/style.css
+++ b/CSS/style.css
@@ -13,7 +13,8 @@ body {
     flex-wrap: wrap;
     margin: 60px 20px 0 20px;
     overflow: hidden;
-    border-radius: 5px
+    border-radius: 10px;
+    box-shadow: 0 8px 16px 0 #9ab8ac;
 }
 
 .row-rects {
@@ -38,34 +39,79 @@ body {
 .subtitle {
     color: hsl(71, 73%, 54%);
 }
+
 .main-text h1 {
     color: hsl(179, 62%, 43%);
     font-size: 20px;
     font-weight: 700;
 }
 
-h3 {
-    margin: 0;
-}
+
 .subscription {
     background-color: hsl(179, 62%, 43%);
-    padding: 10px 20px;
+    padding: 5px 20px;
     color: #FFF;
-    width: 100%
+    width: 100%;
+}
+
+.button {
+    font-family: 'Karla', sans-serif;
+    background-color: hsl(71, 73%, 54%);
+    border: none;
+    color: white;
+    margin: 10px auto 20px auto;
+    padding: 15px 0px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 5px;
+    width: 100%;
+    box-shadow: 0 8px 16px 0 #7a948a;
+    transition: 0.5s;
+}
+
+.button:hover {
+    background-color: hsl(91, 63%, 30%);
+    color: white;
+    transition: 0.5s;
+}
+
+h3 {
+    margin: 0;
+    padding: 20px 0 0 0;
+    font-size: 17px;
+    color: #FFF;
+}
+
+.side-text {
+    display: flex;
+}
+
+.money {
+    margin: 5px 0;
+    font-size: 35px;
+}
+
+.side {
+    color: hsl(179, 64%, 63%);
+    padding-left: 10px;
 }
 
 .whyus {
     background-color: hsl(179, 55%, 53%);
-    padding: 10px 20px;
-    color: #FFF;
-    width: 100%
+    padding: 5px 20px;
+    color: hsl(179, 80%, 80%);
+    width: 100%;
 }
 
 ul {
     font-size: 13px;
     font-weight: 400;
+    line-height: 20px;
     list-style-type: none;
     padding-inline-start: 0;
+    margin: 0;
 }
 
 .attribution { font-size: 11px; text-align: center; }
@@ -73,10 +119,24 @@ ul {
 
 @media (min-width: 500px) {
 
+    body {
+        height: 100vh;
+    }
+
     .content {
         display: flex;
         flex-direction: column;
-        }
+        max-width: 565px;
+        align-content: center;  
+        margin: auto;
+        position: relative;
+        top: calc(50% - 211px)
+    }
+
+    .princ-text{
+        max-width: 95%;
+    }
+
     .row-rects {
         display: flex;
         flex-direction: row;
